--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://karaoke.topia.tv//favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
