--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="https://karaoke.topia.tv//favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>トピア絵文字</title>
+    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
